--- a/index.html
+++ b/index.html
@@ -1,150 +1,2 @@
-<!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
-    <head>
-        <title>The Praxor Website</title>
-        <link rel="icon" href="https://praxor.wtf/oraxor.png">
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-        <style>
-            .content-divider {
-                width: 100%;
-                height: 3rem;
-                background-color: rgba(0, 0, 0, .1);
-                background: linear-gradient(90deg, rgb(104,34,179) 0%, rgb(66,135,245) 100%);
-                border: solid rgba(0, 0, 0, .15);
-                border-width: 1px 0;
-                box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-            }
-        </style>
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #6822b3">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="https://praxor.wtf/oraxor.png" alt="praxor" width="30"></a>
-                <div class="collapse navbar-collapse">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#" id="alreadyHome">Home</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Stuff</a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="https://praxor.wtf/art">Fan Art</a></li>
-                                <li><a class="dropdown-item" href="https://praxor.wtf/friends">My Friends</a></li>
-                                <li><a class="dropdown-item" href="https://praxor.wtf/merch">Merchandise</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="https://praxor.wtf/about">About</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="https://praxor.wtf/contact">Contact Me</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <main>
-            <div class="content-divider"></div>
-            <div class="container px-4 text-center">
-                <div class="px-4 py-5 my-5">
-                    <h1 class="display-5 fw-bold text-body-emphasis">The Praxor Website</h1>
-                    <p class="lead">Welcome to The Praxor Website! Created with love by praxor, using <a href="https://getbootstrap.com" style="color: #636cd3;">Bootstrap</a>!</p>
-                </div>
-            </div>
-            <div class="content-divider"></div>
-            <br>
-            <div class="container px-4">
-                <div class="row row-cols-4">
-                    <div class="col">
-                        <div class="card border-secondary" style="width: 18rem;">
-                            <img src="https://praxor.wtf/praxor1.png" class="card-img-top" alt="praxor">
-                            <div class="card-body">
-                                <h5 class="card-title">Who am I?</h5>
-                                <p class="card-text">Hello! My name is praxor, and I do a lot of things, suprisingly all at once... not very balanced.</p>
-                                <a href="https://praxor.wtf/about" class="btn btn-primary">About this website</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card border-secondary" style="width: 18rem;">
-                            <img src="https://praxor.wtf/praxor2.png" class="card-img-top" alt="praxor">
-                            <div class="card-body">
-                                <h5 class="card-title">What do I do?</h5>
-                                <p class="card-text">My life is kinda short and simple, I am a multi-instrumentalist, I compose music, I am a rookie web designer, I play in the marching band, I'm good at math, etc., etc.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card border-secondary" style="width: 18rem;">
-                            <img src="https://praxor.wtf/no%20way.png" class="card-img-top" alt="wither skeleton skull minecraft">
-                            <div class="card-body">
-                                <h5 class="card-title">No way</h5>
-                                <p class="card-text">Wait actually hold up how did he do that ??? what the heck</p>
-                                <a href="https://praxor.wtf/no%20way.png" class="btn btn-secondary" target="_blank">View this large</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card border-secondary" style="width: 18rem;">
-                            <img src="https://praxor.wtf/oraxor.png" class="card-img-top" alt="what the hell">
-                            <div class="card-body">
-                                <h5 class="card-title">Want more praxor?</h5>
-                                <p class="card-text">Well then, just tag along to see more of me!</p>
-                                <a href="https://youtube.com/@realpraxor" class="btn btn-secondary" target="_blank" style="background-color: rgb(250,75,75);background: linear-gradient(120deg, rgb(250,75,75) 0%, rgb(255,0,0) 100%);">subscribble</a>
-                                <a href="https://twitch.tv/praxorlive" class="btn btn-secondary" target="_blank" style="background: linear-gradient(120deg, rgb(140,27,140) 0%, rgb(120, 7, 120) 100%)">my stream</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <br>
-            <div class="container">
-                <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-                    <p class="col-md-4 mb-0 text-body-secondary">© 2023 The Praxor Industries</p>
-                    <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-                    </a>
-                    <ul class="nav col-md-4 justify-content-end">
-                        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary" id="alreadyHome2">Home</a></li>
-                        <li class="nav-item"><a href="https://praxor.wtf/socials" class="nav-link px-2 text-body-secondary">Socials</a></li>
-                        <li class="nav-item"><a href="https://praxor.wtf/about" class="nav-link px-2 text-body-secondary">About</a></li>
-                    </ul>
-                </footer>
-            </div>
-            <div class="toast-container position-fixed bottom-0 end-0 p-3">
-                <div id="alreadyHomeToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-                    <div class="toast-header">
-                        <img src="https://praxor.wtf/oraxor.png" width="16" height="16" class="rounded me-2" alt="praxor website logo">
-                        <strong class="me-auto">The Praxor Website</strong>
-                        <small>now</small>
-                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-                    </div>
-                    <div class="toast-body">
-                        You're already on the home page!
-                    </div>
-                </div>
-            </div>
-        </main>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-        <script>
-            const toastTrigger = document.getElementById('alreadyHome')
-            const toastTrigger2 = document.getElementById('alreadyHome2')
-            const alreadyHomeToast = document.getElementById('alreadyHomeToast')
-            const alreadyHomeToast2 = document.getElementById('alreadyHomeToast')
-
-            if (toastTrigger) {
-                const toastBootstrap = bootstrap.Toast.getOrCreateInstance(alreadyHomeToast)
-                toastTrigger.addEventListener('click', () => {
-                    toastBootstrap.show()
-              })
-            }
-            if (toastTrigger2) {
-                const toastBootstrap = bootstrap.Toast.getOrCreateInstance(alreadyHomeToast)
-                toastTrigger2.addEventListener('click', () => {
-                    toastBootstrap.show()
-                })
-            }
-        </script>
-    </body>
-</html>
+<h1>null</h1>
+<hr>
