--- a/home/index.html
+++ b/home/index.html
@@ -7,15 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
         <style>
-            .content-divider {
-                width: 100%;
-                height: 3rem;
-                background-color: rgba(0, 0, 0, .1);
-                background: linear-gradient(90deg, rgb(104,34,179) 0%, rgb(66,135,245) 100%);
-                border: solid rgba(0, 0, 0, .15);
-                border-width: 1px 0;
-                box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-            }
+
         </style>
     </head>
     <body>
@@ -45,54 +37,56 @@
             </div>
         </nav>
         <main>
-            <div class="content-divider"></div>
-            <div class="container px-4 text-center">
-                <div class="px-4 py-5 my-5">
-                    <h1 class="display-5 fw-bold text-body-emphasis">The Praxor Website</h1>
-                    <p class="lead">Welcome to The Praxor Website! Created with love by praxor, using <a href="https://getbootstrap.com" style="color: #636cd3;">Bootstrap</a>!</p>
+            <div class="px-4 py-4 text-center" style="background: linear-gradient(120deg, rgba(104,34,179,10) 0%, rgba(0,0,0,1) 100%);">
+                <div class="container rounded" style="background-color: rgba(25,25,25,0.7);">
+                    <div class="px-4 py-5 my-5">
+                        <img src="https://praxor.wtf/oraxor.png">
+                        <h1 class="display-5 fw-bold text-body-emphasis" style="font-family: Consolas, monospace;"><i>The Praxor Website</i></h1>
+                        <p class="lead" style="font-family: Consolas, monospace;">Welcome to my website. Feel free to stay a while and <i>scroll</i>.</p>
+                    </div>
                 </div>
             </div>
-            <div class="content-divider"></div>
-            <br>
-            <div class="container px-4">
-                <div class="row row-cols-4">
-                    <div class="col">
-                        <div class="card border-secondary" style="width: 18rem;">
-                            <img src="https://praxor.wtf/praxor1.png" class="card-img-top" alt="praxor">
-                            <div class="card-body">
-                                <h5 class="card-title">Who am I?</h5>
-                                <p class="card-text">Hello! My name is praxor, and I do a lot of things, suprisingly all at once... not very balanced.</p>
-                                <a href="https://praxor.wtf/about" class="btn btn-primary">About this website</a>
+            <div class="py-5 px-5 bg-body-tertiary">
+                <div class="container">
+                    <div class="row row-cols-4" data-masonry='{"percentPosition": true }'>
+                        <div class="col">
+                            <div class="card border-secondary" style="width: 18rem;">
+                                <img src="https://praxor.wtf/praxor1.png" class="card-img-top" alt="praxor">
+                                <div class="card-body">
+                                    <h5 class="card-title">Who am I?</h5>
+                                    <p class="card-text">Hello! My name is praxor, and I do a lot of things, suprisingly all at once... not very balanced.</p>
+                                    <a href="https://praxor.wtf/about" class="btn btn-primary">about my website</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col">
-                        <div class="card border-secondary" style="width: 18rem;">
-                            <img src="https://praxor.wtf/praxor2.png" class="card-img-top" alt="praxor">
-                            <div class="card-body">
-                                <h5 class="card-title">What do I do?</h5>
-                                <p class="card-text">My life is kinda short and simple, I am a multi-instrumentalist, I compose music, I am a rookie web designer, I play in the marching band, I'm good at math, etc., etc.</p>
+                        <div class="col">
+                            <div class="card border-secondary" style="width: 18rem;">
+                                <img src="https://praxor.wtf/praxor2.png" class="card-img-top" alt="praxor">
+                                <div class="card-body">
+                                    <h5 class="card-title">What do I do?</h5>
+                                    <p class="card-text">My life is kinda short and simple, I am a multi-instrumentalist, I compose music, I am a rookie web designer, I play in the marching band, I'm good at math, etc., etc.</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col">
-                        <div class="card border-secondary" style="width: 18rem;">
-                            <img src="https://praxor.wtf/no%20way.png" class="card-img-top" alt="wither skeleton skull minecraft">
-                            <div class="card-body">
-                                <h5 class="card-title">No way</h5>
-                                <p class="card-text">Wait actually hold up how did he do that ??? what the heck</p>
-                                <a href="https://praxor.wtf/no%20way.png" class="btn btn-secondary" target="_blank">View this large</a>
+                        <div class="col">
+                            <div class="card border-secondary" style="width: 18rem;">
+                                <img src="https://praxor.wtf/no%20way.png" class="card-img-top" alt="wither skeleton skull minecraft">
+                                <div class="card-body">
+                                    <h5 class="card-title">No way</h5>
+                                    <p class="card-text">Wait actually hold up how did he do that ??? what the heck</p>
+                                    <a href="https://praxor.wtf/no%20way.png" class="btn btn-secondary" target="_blank">View this large</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col">
-                        <div class="card border-secondary" style="width: 18rem;">
-                            <img src="https://praxor.wtf/oraxor.png" class="card-img-top" alt="what the hell">
-                            <div class="card-body">
-                                <h5 class="card-title">Want more praxor?</h5>
-                                <p class="card-text">Well then, just tag along to see more of me!</p>
-                                <a href="https://youtube.com/@realpraxor" class="btn btn-secondary" target="_blank" style="background-color: rgb(250,75,75);background: linear-gradient(120deg, rgb(250,75,75) 0%, rgb(255,0,0) 100%);">subscribble</a>
-                                <a href="https://twitch.tv/praxorlive" class="btn btn-secondary" target="_blank" style="background: linear-gradient(120deg, rgb(140,27,140) 0%, rgb(120, 7, 120) 100%)">my stream</a>
+                        <div class="col">
+                            <div class="card border-secondary" style="width: 18rem;">
+                                <img src="https://praxor.wtf/oraxor.png" class="card-img-top" alt="what the hell">
+                                <div class="card-body">
+                                    <h5 class="card-title">Want more praxor?</h5>
+                                    <p class="card-text">Well then, just tag along to see more of me!</p>
+                                    <a href="https://youtube.com/@realpraxor" class="btn btn-secondary" target="_blank" style="background-color: rgb(250,75,75);background: linear-gradient(120deg, rgb(250,75,75) 0%, rgb(255,0,0) 100%);">subscribe</a>
+                                    <a href="https://twitch.tv/praxorlive" class="btn btn-secondary" target="_blank" style="background: linear-gradient(120deg, rgb(140,27,140) 0%, rgb(120, 7, 120) 100%)">my stream</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -127,6 +121,7 @@
             </div>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
         <script>
             const toastTrigger = document.getElementById('alreadyHome')
             const toastTrigger2 = document.getElementById('alreadyHome2')
