--- a/home/index.html
+++ b/home/index.html
@@ -7,14 +7,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
         <style>
-
+            .navbar-brand {
+                transform: translateX(-50%);
+                left: 50%;
+                position: absolute;
+            }
         </style>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #6822b3">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="https://praxor.wtf/oraxor.png" alt="praxor" width="30"></a>
-                <div class="collapse navbar-collapse">
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#5555dd" class="bi bi-star-fill navbar-brand mx-auto" viewBox="0 0 16 16">
+                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                </svg>
+                <div class="collapse navbar-collapse px-5">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#" id="alreadyHome">Home</a>
@@ -30,9 +36,10 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="https://praxor.wtf/contact">Contact Me</a>
+                            <a class="nav-link active" aria-current="page" href="https://praxor.wtf/contact">Contact</a>
                         </li>
                     </ul>
+                    <i><span id="clock" class="text-right" href="#" style="font-family: Consolas, monospace;color:#777777"></span></i>
                 </div>
             </div>
         </nav>
@@ -46,9 +53,9 @@
                     </div>
                 </div>
             </div>
-            <div class="py-5 px-5 bg-body-tertiary">
-                <div class="container">
-                    <div class="row row-cols-4" data-masonry='{"percentPosition": true }'>
+            <div class="py-5 px-5">
+                <div class="container d-flex justify-content-center">
+                    <div class="row row-cols-3">
                         <div class="col">
                             <div class="card border-secondary" style="width: 18rem;">
                                 <img src="https://praxor.wtf/praxor1.png" class="card-img-top" alt="praxor">
@@ -70,38 +77,28 @@
                         </div>
                         <div class="col">
                             <div class="card border-secondary" style="width: 18rem;">
-                                <img src="https://praxor.wtf/no%20way.png" class="card-img-top" alt="wither skeleton skull minecraft">
-                                <div class="card-body">
-                                    <h5 class="card-title">No way</h5>
-                                    <p class="card-text">Wait actually hold up how did he do that ??? what the heck</p>
-                                    <a href="https://praxor.wtf/no%20way.png" class="btn btn-secondary" target="_blank">View this large</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card border-secondary" style="width: 18rem;">
                                 <img src="https://praxor.wtf/oraxor.png" class="card-img-top" alt="what the hell">
                                 <div class="card-body">
                                     <h5 class="card-title">Want more praxor?</h5>
-                                    <p class="card-text">Well then, just tag along to see more of me!</p>
-                                    <a href="https://youtube.com/@realpraxor" class="btn btn-secondary" target="_blank" style="background-color: rgb(250,75,75);background: linear-gradient(120deg, rgb(250,75,75) 0%, rgb(255,0,0) 100%);">subscribe</a>
-                                    <a href="https://twitch.tv/praxorlive" class="btn btn-secondary" target="_blank" style="background: linear-gradient(120deg, rgb(140,27,140) 0%, rgb(120, 7, 120) 100%)">my stream</a>
+                                    <p class="card-text">Feel free to get in touch, I don't bite.</p>
+                                    <a class="btn btn-primary" href="https://praxor.wtf/contact">contact me</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <br>
             <div class="container">
                 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
                     <p class="col-md-4 mb-0 text-body-secondary">© 2023 The Praxor Industries</p>
-                    <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+                    <a href="#" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#777777" class="bi bi-arrow-up" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
+                        </svg>
                     </a>
                     <ul class="nav col-md-4 justify-content-end">
                         <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary" id="alreadyHome2">Home</a></li>
-                        <li class="nav-item"><a href="https://praxor.wtf/socials" class="nav-link px-2 text-body-secondary">Socials</a></li>
+                        <li class="nav-item"><a href="https://praxor.wtf/contact" class="nav-link px-2 text-body-secondary">Contact</a></li>
                         <li class="nav-item"><a href="https://praxor.wtf/about" class="nav-link px-2 text-body-secondary">About</a></li>
                     </ul>
                 </footer>
@@ -140,6 +137,13 @@
                     toastBootstrap.show()
                 })
             }
+        </script>
+        <script type="text/javascript">
+            var clockElement = document.getElementById('clock');
+            function clock() {
+                clockElement.textContent = new Date().toString();
+            }
+            setInterval(clock, 1000);
         </script>
     </body>
 </html>
