--- a/art/index.html
+++ b/art/index.html
@@ -44,7 +44,234 @@
             </div>
         </nav>
         <main>
-        <div class="container">
+            <div class="p-5">
+                <div class="container text-center">
+                    <h1 class="display-5">The Praxor Fan Art Album</h1>
+                </div>
+            </div>
+            <div class="album py-5 bg-body-tertiary">
+                <div class="container">
+                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <img class="bd-placeholder-img card-img-top" src="https://praxor.wtf/praxor1.png">
+                                <div class="card-body">
+                                    <p class="card-text">Thank you toohi for providing this piece of art work! It truly represents praxor in every way, so much that I even made it an example to who I am.</p>
+                                    <div class="d-flex text-back">
+                                        <figure>
+                                            <blockquote class="blockquote">
+                                                <p>"this guy is sexy"</p>
+                                            </blockquote>
+                                            <figcaption class="blockquote-footer">
+                                                praxor, <cite title="Date">October 2022</cite>
+                                            </figcaption>
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <img class="bd-placeholder-img card-img-top" src="https://praxor.wtf/praxor2.png">
+                                <div class="card-body">
+                                    <p class="card-text">This cool remaster of the original praxor image, <i>also created by toohi</i>, is truly a work of art as her newborn style was able to create this delicate piece of imagery.</p>
+                                    <div class="d-flex text-back">
+                                        <figure>
+                                            <blockquote class="blockquote">
+                                                <p>"wow toohi what the fu- *beep*"</p>
+                                            </blockquote>
+                                            <figcaption class="blockquote-footer">
+                                                praxor, <cite title="Date">February 2023</cite>
+                                            </figcaption>
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <img class="card-img-top" src="https://praxor.wtf/oraxor.png">
+                                <div class="card-body">
+                                    <p class="card-text">Despite being just a normal cat with huge eyes, this cat is the definition of praxor, well at least from where he comes from. This "<a href="https://steamcommunity.com/id/praxor2" target="_blank">deranged animal</a>" is the reason praxor is here today.</p>
+                                    <div class="d-flex text-back">
+                                        <figure>
+                                            <blockquote class="blockquote">
+                                                <p>"praxor you suck at csgo"</p>
+                                            </blockquote>
+                                            <figcaption class="blockquote-footer">
+                                                ArchangelVesper, <cite title="Date">September 2023</cite>
+                                            </figcaption>
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <img class="card-img-top" src="https://example.com">
+                                <div class="card-body">
+                                    <p class="card-text">[ THIS IS A PLACEHOLDER ]</p>
+                                    <div class="d-flex text-back">
+                                        <figure>
+                                            <blockquote class="blockquote">
+                                                <p>"example quote"</p>
+                                            </blockquote>
+                                            <figcaption class="blockquote-footer">
+                                                User Unknown, <cite title="Date">Month XXXX</cite>
+                                            </figcaption>
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <img class="card-img-top" src="https://example.com">
+                                <div class="card-body">
+                                    <p class="card-text">[ THIS IS A PLACEHOLDER ]</p>
+                                    <div class="d-flex text-back">
+                                        <figure>
+                                            <blockquote class="blockquote">
+                                                <p>"example quote"</p>
+                                            </blockquote>
+                                            <figcaption class="blockquote-footer">
+                                                User Unknown, <cite title="Date">Month XXXX</cite>
+                                            </figcaption>
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <img class="card-img-top" src="https://example.com">
+                                <div class="card-body">
+                                    <p class="card-text">[ THIS IS A PLACEHOLDER ]</p>
+                                    <div class="d-flex text-back">
+                                        <figure>
+                                            <blockquote class="blockquote">
+                                                <p>"example quote"</p>
+                                            </blockquote>
+                                            <figcaption class="blockquote-footer">
+                                                User Unknown, <cite title="Date">Month XXXX</cite>
+                                            </figcaption>
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <img class="card-img-top" src="https://example.com">
+                                <div class="card-body">
+                                    <p class="card-text">[ THIS IS A PLACEHOLDER ]</p>
+                                    <div class="d-flex text-back">
+                                        <figure>
+                                            <blockquote class="blockquote">
+                                                <p>"example quote"</p>
+                                            </blockquote>
+                                            <figcaption class="blockquote-footer">
+                                                User Unknown, <cite title="Date">Month XXXX</cite>
+                                            </figcaption>
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <img class="card-img-top" src="https://example.com">
+                                <div class="card-body">
+                                    <p class="card-text">[ THIS IS A PLACEHOLDER ]</p>
+                                    <div class="d-flex text-back">
+                                        <figure>
+                                            <blockquote class="blockquote">
+                                                <p>"example quote"</p>
+                                            </blockquote>
+                                            <figcaption class="blockquote-footer">
+                                                User Unknown, <cite title="Date">Month XXXX</cite>
+                                            </figcaption>
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <img class="card-img-top" src="https://example.com">
+                                <div class="card-body">
+                                    <p class="card-text">[ THIS IS A PLACEHOLDER ]</p>
+                                    <div class="d-flex text-back">
+                                        <figure>
+                                            <blockquote class="blockquote">
+                                                <p>"example quote"</p>
+                                            </blockquote>
+                                            <figcaption class="blockquote-footer">
+                                                User Unknown, <cite title="Date">Month XXXX</cite>
+                                            </figcaption>
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <img class="card-img-top" src="https://example.com">
+                                <div class="card-body">
+                                    <p class="card-text">[ THIS IS A PLACEHOLDER ]</p>
+                                    <div class="d-flex text-back">
+                                        <figure>
+                                            <blockquote class="blockquote">
+                                                <p>"example quote"</p>
+                                            </blockquote>
+                                            <figcaption class="blockquote-footer">
+                                                User Unknown, <cite title="Date">Month XXXX</cite>
+                                            </figcaption>
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <img class="card-img-top" src="https://example.com">
+                                <div class="card-body">
+                                    <p class="card-text">[ THIS IS A PLACEHOLDER ]</p>
+                                    <div class="d-flex text-back">
+                                        <figure>
+                                            <blockquote class="blockquote">
+                                                <p>"example quote"</p>
+                                            </blockquote>
+                                            <figcaption class="blockquote-footer">
+                                                User Unknown, <cite title="Date">Month XXXX</cite>
+                                            </figcaption>
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <img class="card-img-top" src="https://example.com">
+                                <div class="card-body">
+                                    <p class="card-text">[ THIS IS A PLACEHOLDER ]</p>
+                                    <div class="d-flex text-back">
+                                        <figure>
+                                            <blockquote class="blockquote">
+                                                <p>"example quote"</p>
+                                            </blockquote>
+                                            <figcaption class="blockquote-footer">
+                                                User Unknown, <cite title="Date">Month XXXX</cite>
+                                            </figcaption>
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
                 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
                     <p class="col-md-4 mb-0 text-body-secondary">© 2023 The Praxor Industries</p>
                     <a href="#" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
